--- a/index.html
+++ b/index.html
@@ -87,21 +87,30 @@
     <a href="" class="about-img-item">
         <img src="img/services-bg-1.jpg" class="shown" alt="" srcset="">
         <div class="hidden-img-container">
-        <img src="img/icons/icon-spa.png" class="hidden-img" alt="" srcset=""><br>
-        <h7 class="hidden-header">Body treatment</h7>
+            <img src="img/icons/icon-spa.png" class="hidden-img" alt="" srcset=""><br>
+            <h7 class="hidden-header">Body treatment</h7>
         </div>
     </a>
     <a href="" class="about-img-item">
         <img src="img/services-bg-2.jpg" class="shown" alt="" srcset="">
-        <h5></h5>
+        <div class="hidden-img-container">
+            <img src="img/icons/icon-spa.png" class="hidden-img" alt="" srcset=""><br>
+            <h7 class="hidden-header">Body treatment</h7>
+        </div>
     </a>
     <a href="" class="about-img-item">
         <img src="img/services-bg-3.jpg" class="shown" alt="" srcset="">
-        <h5></h5>
+        <div class="hidden-img-container">
+            <img src="img/icons/icon-spa.png" class="hidden-img" alt="" srcset=""><br>
+            <h7 class="hidden-header">Body treatment</h7>
+        </div>
     </a>
     <a href="" class="about-img-item">
         <img src="img/services-bg-4.jpg" class="shown" alt="" srcset="">
-        <h5></h5>
+        <div class="hidden-img-container">
+            <img src="img/icons/icon-spa.png" class="hidden-img" alt="" srcset=""><br>
+            <h7 class="hidden-header">Body treatment</h7>
+        </div>
     </a>
 </section>
 
