--- a/index.html
+++ b/index.html
@@ -104,7 +104,29 @@
         <h5></h5>
     </a>
 </section>
-
+<section class="team">
+    <div class="img-container"></div>
+        <div>
+            <article>
+                <h5></h5>
+                <p></p>
+                <a href="http://"></a>
+            </article>
+        </div>
+    <div class="img-container"></div>
+    <article>
+        <h5></h5>
+        <p></p>
+        <a href="http://"></a>
+    </article>
+    <div class="img-container">
+        <article>
+            <h5></h5>
+            <p></p>
+            <a href="http://"></a>
+        </article>
+    </div>
+</section>
     <script src="js/main.js"></script>
 </body>
 </html>
