--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <option value="peeling">Peeling</option>
             </select>
             <input type="number" name="phone-number" id="phone-number">
-            <input type="date" name="date" id="date" placeholder="">
+            <input type="date" name="date" id="date">
             <input type="time" name="time" id="time">
         </form>
     </div>
