--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
         <div class="logo-container">
         </div>
         <ul>
-            <li>
+            <div class="hamburger-container">  
+                <div class="hamburger">
+                </div>
+
+                <div class="hamburger">
+                </div>
+
+                <div class="hamburger">
+                </div> 
+            </div>
+            
+            <li id="li-first">
                 <a href="" class="nav-item">Home</a>
             </li>
             <li>
@@ -282,7 +293,7 @@
     </div>
 </section>
 <footer class="footer">
-    <nav class="nav-menu">
+    <nav class="nav-menu2">
         <div class="logo-container">
         </div>
         <ul>
@@ -303,6 +314,11 @@
             </li>
         </ul>
     </nav>
+    <div class="copyright">
+        <h7>
+            &#169;&nbsp;Copyright 2022
+        </h7>    
+    </div>
 </footer>
 
 
