--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav class="nav-menu">
+    <nav class="nav-menu" id="main-nav-menu">
         <div class="logo-container">
         </div>
         <ul>
@@ -31,10 +31,10 @@
             </div>
             
             <li id="li-first">
-                <a href="" class="nav-item">Home</a>
+                <a href="#main-nav-menu" class="nav-item">Home</a>
             </li>
             <li>
-                <a href="" class="nav-item">About</a>
+                <a href="#about" class="nav-item">About</a>
             </li>
             <li>
                 <a href="" class="nav-item">Feature</a>
@@ -77,7 +77,7 @@
 
     </header>
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="logo-container">
             <img src="img/logo.png" alt="" srcset="">
         <h5>
