--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </a>
 </section>
 
-<section class="procedures">
+<section class="procedures" id="procedures">
     <div class="section-header">
         <h2>Popular procedures</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod provident corrupti nesciunt non, quisquam facilis sunt error veritatis totam recusandae?</p>
@@ -163,7 +163,7 @@
     </div>
 </section>
 
-<section class="team">
+<section class="team" id="team">
     <div class="section-header">
         <h2>Our team</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod provident corrupti nesciunt non, quisquam facilis sunt error veritatis totam recusandae?</p>
@@ -208,7 +208,7 @@
     </div>
 </section>
 
-<section class="form-section">
+<section class="form-section" id="form-section">
     <div class="form-img">
         <img src="img/contact-bg.jpg" alt="" srcset="">
     </div>
@@ -235,7 +235,7 @@
     </div>
 </section>
 
-<section class="blog">
+<section class="blog" id="blog">
     <div class="section-header">
         <h2>Latest from blog</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod provident corrupti nesciunt non, quisquam facilis sunt error veritatis totam recusandae?</p>
@@ -271,7 +271,7 @@
     </div>
 </section>
 
-<section class="contact">
+<section class="contact" id="contact">
     <div class="section-header">
         <h2>Get In Touch</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod provident corrupti nesciunt non, quisquam facilis sunt error veritatis totam recusandae?</p>
@@ -301,7 +301,7 @@
         </div>
     </div>
 </section>
-<footer class="footer">
+<footer class="footer" id="footer">
     <nav class="nav-menu2">
         <div class="logo-container">
         </div>
